# brokerage-statement-downloader

./: .gitignore  README.md
chrome-extension/: README.md  manifest.json
chrome-extension/background/: service-worker.js
chrome-extension/content-scripts/: detector.js
chrome-extension/content-scripts/brokerages/: etrade.js  fidelity.js  ibkr.js  m1finance.js  robinhood.js  schwab.js  vanguard.js  webull.js
chrome-extension/content-scripts/handlers/: base.js  robinhood.js
chrome-extension/popup/: popup.css  popup.html  popup.js  progress.html  progress.js
chrome-extension/rules/: remove_csp.json
chrome-extension/shared/: config.js  tracker.js
playwright-downloader/: .gitignore  README.md  pyproject.toml
playwright-downloader/src/statement_downloader/: base_brokerage.py  browser.py  cli.py  config.py  tracker.py
playwright-downloader/src/statement_downloader/brokerages/: __init__.py  etrade.py  ibkr.py
src/statement_downloader/: base_brokerage.py  config.py  tracker.py
src/statement_downloader/brokerages/: etrade.py  fidelity.py  ibkr.py  m1finance.py  robinhood.py  schwab.py  vanguard.py  webull.py
