[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statement-downloader"
version = "0.1.0"
description = "Download monthly brokerage statements via Playwright"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
statement-downloader = "statement_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
